[package]
name = "check-amazon"
version = "0.1.0"
authors = ["AlanSwenson <alan@alanswenson.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0.111", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"